--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "yiisoft/yii2-swiftmailer": "*",
         "nenad/yii2-password-strength": "*",
         "mihaildev/yii2-ckeditor": "*",
-        "filsh/yii2-oauth2-server": "*"
+        "filsh/yii2-oauth2-server": "dev-sbhk"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
