--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nenad/yii2-advanced-template",
+    "name": "walteryiphk/yii2-advanced-template",
     "description": "Improved Yii 2 Advanced Application Template By Nenad Zivkovic",
     "keywords": ["yii2", "framework", "advanced", "improved", "application template", "nenad"],
     "type": "project",
@@ -8,7 +8,7 @@
         "tutorial": "http://www.freetuts.org/tutorial/view?id=6",
         "source": "https://github.com/nenad-zivkovic/yii2-advanced-template"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "repositories": [
         {
             "url": "https://github.com/walteryiphk/yii2-oauth2-server",
